Resolved an issued with an extra div on the html file. Removal of the bullet list, underline and changing of thetext color. Use of flex wrap on the box-1 to prevent overflow of the cards.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -39,13 +39,25 @@ body {
   border-radius: 4px;
   padding: 16px;
   margin: 16px;
+  width: 300px;
 }
 
 .box {
   display: flex;
+  flex: 1;
 }
 
 .box-1 {
   display: flex;
+  flex-wrap: wrap;
+}
 
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
 }
